[Tools] Fix misaligned text

--- a/css/tools.css
+++ b/css/tools.css
@@ -1,5 +1,6 @@
 div > div > p {
-    margin: 4px;
+    margin-top: 4px;
+    margin-bottom: 4px;
 }
 h3 {
     margin-top: 0px;
